Issue #56: Refactored section menu creation components, added stores `allSectionsStore` -- to provide available dataset' sections list, `currentSectionIdStore` -- to store current section id. Section id is saved to local storage and restored on next app launch/editor page visit. Section menu in the left panel as adaptive: it disappears on narrow screens (has the same treshold, 768px, as the top menu).

--- a/src/components/RandoEditor/SectionsNavigator/SectionsNavigator.scss
+++ b/src/components/RandoEditor/SectionsNavigator/SectionsNavigator.scss
@@ -10,19 +10,5 @@
     }
   }
   .content {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    padding: 16px;
-    gap: 16px;
-    > .delimiter {
-      border-top: 1px solid $borderColor;
-      $padding: 0;
-      margin-top: $padding;
-      padding-top: $padding;
-    }
-    > :global(.section) {
-      width: 100%;
-    }
   }
 }
